--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "js-task-lister-lite",
+  "name": "phase-1-tasklister-mini-project",
   "version": "1.0.0",
-  "description": "One list, many tasks. Create a todo list in vanilla JS",
-  "main": "src/index.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 5000 --reporter spec"
+    "test": "mocha --require @babel/register test/indexTest.js"
   },
   "repository": {
     "type": "git",
@@ -17,18 +17,18 @@
     "lab",
     "ES6 class syntax"
   ],
-  "author": "Flatiron School",
-  "license": "SEE LICENSE IN LICENSE.md",
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/learn-co-curriculum/js-task-lister-project/issues"
   },
   "homepage": "https://github.com/learn-co-curriculum/js-task-lister-project",
   "dependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.23.0",
-    "chai": "^4.3.8",
-    "jsdom": "^22.1.0",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.3"
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/register": "^7.15.0",
+    "chai": "^4.3.4",
+    "jsdom": "^16.4.0",
+    "mocha": "^9.1.1"
   }
 }
